# moda-backend

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: settings.py  urls.py
auth/: api.py
authentication/: api.py
curation/: admin.py  api.py  models.py  schemas.py
curation/migrations/: 0001_initial.py  0002_color_season_remove_curation_color_and_more.py  0003_alter_color_name_alter_season_name.py  0004_rename_color_curation_colors_and_more.py
like/: admin.py  models.py
like/migrations/: 0001_initial.py
product/: admin.py  api.py  models.py  schemas.py
product/management/commands/: crawl_products_from_musinsa.py
product/migrations/: 0001_initial.py  0002_product_created_at_alter_product_category.py  0003_alter_product_price.py  0004_product_brand.py  0005_alter_product_brand.py
search/: api.py
user/: admin.py  api.py  models.py  schemas.py
user/migrations/: 0001_initial.py  0002_alter_customuser_social_account_type.py
